User Registration, Login, Logout, Slide, and bottomNavigationBar
