# backend/models/slider.model.js
@@ -1,0 +1,30 @@
+const mongoose = require("mongoose");
+
+const slider = mongoose.model(
+  "slider",
+  mongoose.Schema(
+    {
+      sliderName: {
+        type: String,
+        required: true,
+        unique: true
+      },
+      sliderDescription: {
+        type: String,
+        required: false,
+      },
+      sliderURL: {
+        type: String,
+        required: false,
+      },
+      sliderImage: {
+        type: String,
+        required: true,
+      }
+    }
+  )
+);
+
+module.exports = {
+  slider,
+};
