# backend/routes/app.routes.js
@@ -1,5 +1,8 @@
 const categoryController = require("../controllers/categories.controller");
 const productController = require("../controllers/products.controller");
+const userController = require("../controllers/users.controller");
+const sliderController = require("../controllers/sliders.controller");
+
 const express = require("express");
 const router = express.Router();
 
@@ -14,5 +17,15 @@ router.get("/product", productController.findAll);
 router.get("/product/:id", productController.findOne);
 router.put("/product/:id", productController.update);
 router.delete("/product/:id", productController.delete);
+
+router.post("/register", userController.register);
+router.post("/login", userController.login);
+
+router.post("/slider", sliderController.create);
+router.get("/slider", sliderController.findAll);
+router.get("/slider/:id", sliderController.findOne);
+router.put("/slider/:id", sliderController.update);
+router.delete("/slider/:id", sliderController.delete);
+
 
 module.exports = router;
