# backend/swagger.json
@@ -14,12 +14,20 @@
     "basePath": "/",
     "tags": [
         {
+            "name": "User",
+            "description": "User API"
+        },
+        {
             "name": "Category",
             "description": "Category API"
         },
         {
             "name": "Product",
             "description": "Product API"
+        },
+        {
+            "name": "Slider",
+            "description": "Slider API"
         }
     ],
     "schemes": [
@@ -32,6 +40,62 @@
         "application/json"
     ],
     "paths": {
+        "/api/register": {
+            "post": {
+                "tags": [
+                    "User"
+                ],
+                "summary": "Create User",
+                "parameters": [
+                    {
+                        "name": "RegisterModel",
+                        "in": "body",
+                        "required": true,
+                        "description": "User Registration",
+                        "type": "object",
+                        "schema": {
+                            "$ref": "#/definitions/RegisterModel"
+                        }
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "$ref": "#/definitions/RegisterModelServiceResponse"
+                        }
+                    }
+                }
+            }
+        },
+        "/api/login": {
+            "post": {
+                "tags": [
+                    "User"
+                ],
+                "summary": "Login User",
+                "parameters": [
+                    {
+                        "name": "LoginModel",
+                        "in": "body",
+                        "required": true,
+                        "description": "User Login",
+                        "type": "object",
+                        "schema": {
+                            "$ref": "#/definitions/LoginModel"
+                        }
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "$ref": "#/definitions/LoginModelServiceResponse"
+                        }
+                    }
+                }
+            }
+        },
         "/api/category": {
             "get": {
                 "tags": [
@@ -259,7 +323,6 @@
                         "required": true,
                         "type": "string",
                         "description": "ProductShort Description"
-
                     },
                     {
                         "name": "productDescription",
@@ -267,7 +330,6 @@
                         "required": false,
                         "type": "string",
                         "description": "Product Description"
-
                     },
                     {
                         "name": "productPrice",
@@ -275,7 +337,6 @@
                         "required": true,
                         "type": "number",
                         "description": "Product Price"
-
                     },
                     {
                         "name": "productSalePrice",
@@ -283,7 +344,6 @@
                         "required": false,
                         "type": "number",
                         "description": "ProductSale Price"
-
                     },
                     {
                         "name": "productImage",
@@ -298,8 +358,6 @@
                         "required": false,
                         "type": "string",
                         "description": "Product SKU"
-
-
                     },
                     {
                         "name": "productType",
@@ -376,7 +434,6 @@
                         "required": true,
                         "type": "string",
                         "description": "ProductShort Description"
-
                     },
                     {
                         "name": "productDescription",
@@ -384,7 +441,6 @@
                         "required": false,
                         "type": "string",
                         "description": "Product Description"
-
                     },
                     {
                         "name": "productPrice",
@@ -392,7 +448,6 @@
                         "required": true,
                         "type": "number",
                         "description": "Product Price"
-
                     },
                     {
                         "name": "productSalePrice",
@@ -400,7 +455,6 @@
                         "required": false,
                         "type": "number",
                         "description": "ProductSale Price"
-
                     },
                     {
                         "name": "productImage",
@@ -415,8 +469,6 @@
                         "required": false,
                         "type": "string",
                         "description": "Product SKU"
-
-
                     },
                     {
                         "name": "productType",
@@ -456,9 +508,195 @@
                     }
                 }
             }
+        },
+        "/api/slider": {
+            "get": {
+                "tags": [
+                    "Slider"
+                ],
+                "summary": "Get All Slider",
+                "parameters": [
+                    {
+                        "name": "sliderName",
+                        "in": "query",
+                        "required": false,
+                        "description": "Slider Name",
+                        "type": "string"
+                    },
+                    {
+                        "name": "page",
+                        "in": "query",
+                        "required": false,
+                        "description": "Page Number",
+                        "type": "integer",
+                        "default": 1
+                    },
+                    {
+                        "name": "pageSize",
+                        "in": "query",
+                        "required": false,
+                        "description": "Page Number",
+                        "type": "integer",
+                        "default": 10
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "$ref": "#/definitions/SliderServiceResponse"
+                        }
+                    }
+                }
+            },
+            "post": {
+                "tags": [
+                    "Slider"
+                ],
+                "summary": "Create Slider",
+                "parameters": [
+                    {
+                        "name": "sliderName",
+                        "in": "formData",
+                        "required": true,
+                        "type": "string",
+                        "description": "Slider Name (unique)"
+                    },
+                    {
+                        "name": "sliderDescription",
+                        "in": "formData",
+                        "required": true,
+                        "type": "string",
+                        "description": "Slider Description"
+                    },
+                    {
+                        "name": "sliderImage",
+                        "in": "formData",
+                        "required": false,
+                        "type": "file",
+                        "description": "Slider Image"
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "$ref": "#/definitions/SliderServiceResponse"
+                        }
+                    }
+                }
+            }
+        },
+        "/api/slider/{id}": {
+            "parameters": [
+                {
+                    "name": "id",
+                    "in": "path",
+                    "required": true,
+                    "description": "Slider Id",
+                    "type": "string"
+                }
+            ],
+            "get": {
+                "tags": [
+                    "Slider"
+                ],
+                "summary": "Slider Details based on Slider Id",
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "$ref": "#/definitions/SliderServiceResponse"
+                        }
+                    }
+                }
+            },
+            "put": {
+                "tags": [
+                    "Slider"
+                ],
+                "summary": "Update Slider",
+                "parameters": [
+                    {
+                        "name": "sliderName",
+                        "in": "formData",
+                        "required": true,
+                        "type": "string",
+                        "description": "Slider Name (unique)"
+                    },
+                    {
+                        "name": "sliderDescription",
+                        "in": "formData",
+                        "required": true,
+                        "type": "string",
+                        "description": "Slider Description"
+                    },
+                    {
+                        "name": "sliderImage",
+                        "in": "formData",
+                        "required": false,
+                        "type": "file",
+                        "description": "Slider Image"
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "$ref": "#/definitions/SliderServiceResponse"
+                        }
+                    }
+                }
+            },
+            "delete": {
+                "tags": [
+                    "Slider"
+                ],
+                "summary": "Delete Slider",
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "$ref": "#/definitions/SliderServiceResponse"
+                        }
+                    }
+                }
+            }
         }
     },
     "definitions": {
+        "RegisterModel": {
+            "required": [
+                "fullName",
+                "email",
+                "password"
+            ],
+            "properties": {
+                "fullName": {
+                    "type": "string"
+                },
+                "email": {
+                    "type": "string"
+                },
+                "password": {
+                    "type": "string"
+                }
+            }
+        },
+        "LoginModel": {
+            "required": [
+                "email",
+                "password"
+            ],
+            "properties": {
+                "email": {
+                    "type": "string"
+                },
+                "password": {
+                    "type": "string"
+                }
+            }
+        },
         "Category": {
             "required": [
                 "categoryName",
@@ -523,6 +761,57 @@
                 }
             }
         },
+        "Slider": {
+            "required": [
+                "sliderName",
+                "sliderImage",
+                "_id"
+            ],
+            "properties": {
+                "_id": {
+                    "type": "integer",
+                    "uniqueItems": true
+                },
+                "sliderName": {
+                    "type": "string"
+                },
+                "sliderDescription": {
+                    "type": "string"
+                },
+                "sliderURL": {
+                    "type": "string"
+                },
+                "sliderImage": {
+                    "type": "string"
+                }
+            }
+        },
+        "RegisterModelServiceResponse": {
+            "properties": {
+                "message": {
+                    "type": "string"
+                },
+                "data": {
+                    "type": "array",
+                    "items": {
+                        "$ref": "#/definitions/RegisterModel"
+                    }
+                }
+            }
+        },
+        "LoginModelServiceResponse": {
+            "properties": {
+                "message": {
+                    "type": "string"
+                },
+                "data": {
+                    "type": "array",
+                    "items": {
+                        "$ref": "#/definitions/LoginModel"
+                    }
+                }
+            }
+        },
         "CategoryServiceResponse": {
             "properties": {
                 "message": {
@@ -545,6 +834,19 @@
                     "type": "array",
                     "items": {
                         "$ref": "#/definitions/Product"
+                    }
+                }
+            }
+        },
+        "SliderServiceResponse": {
+            "properties": {
+                "message": {
+                    "type": "string"
+                },
+                "data": {
+                    "type": "array",
+                    "items": {
+                        "$ref": "#/definitions/Slider"
                     }
                 }
             }
